--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/no-unused-vars": 0,
-    "@typescript-eslint/no-empty-object-type": 0
+    "@typescript-eslint/no-empty-object-type": 0,
+    "react/no-unescaped-entities": 0
   }
 }
